Fixed button jumping

--- a/app/sass/styles.scss
+++ b/app/sass/styles.scss
@@ -54,7 +54,9 @@ section {
     border: none;
     width: 150px;
     height: 40px;
-    margin: 20px 0 ;
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
     color: white;
     font-size: 18px;
   }
